== 3.0.0.beta.8
  addError and removeError are not callbacks
  test against more versions of jQuery

== 3.0.0.beta.7
  Significant changes required a move back to beta

  Don't require #new_record?
  Moved applyErrorField to the element:valdiate:fail callback

  Rewrote the Javascript to play nicer with jQuery
  client-side-validations.js is now rails.validations.js

== 3.0.0.rc.1
  Scopes on uniqeuness validator

== 3.0.0.beta.6
  Renamed clientSideValidations.validator to clientSideValidations.validators

== 3.0.0.beta.5
  Fixed load order issue with other form builders
  Better ActiveRecord Uniqueness
  JS Validator Callbacks

== 3.0.0.beta.4
  Fix for lower case \z as Regex terminator
  Reduce complecity of error wrapper rendering
  SimpleForm and Formtastic javascript unit tests
  Removed keyup events

== 3.0.0.beta.3
  Custom form id

== 3.0.0.beta.2
  Forgot to include javascript files in the gem

== 3.0.0.beta.1
  Javascript file fixes
  Added QUnit tests
  Fixed some JS bugs found while writing QUnit tests

== 3.0.0.alpha.9
  I'm an idiot. I yanked alpha.8 by mistake

== 3.0.0.alpha.8
  Range JSON fix
  Handle nested resources for uniqueness validator
  Don't repeat validation if value hasn't changed
  Fix for :on => :create & :on => :update

== 3.0.0.alpha.7
  Regex JSON fix
  Javascript Function metaprogramming fix

== 3.0.0.alpha.6
  Fix for data-validators parsing
  Fix for length Javscript validator

== 3.0.0.alpha.5
  Formtastic support

== 3.0.0.alpha.4
  fields_for now inherits :validate option from parent
  SimpleForm support
  Added adapters for error field detach and apply functions

== 3.0.0.alpha.3
  Turn off client side validations per field
  Support remote forms
  Fix load order issue with conflicting gems

== 3.0.0.alpha.2
  Ruby 1.8.7 support

== 3.0.0.alpha.1
  Complete rewrite!
