@@ -7,9 +7,23 @@ test('when value is in the list', function() {
   equal(clientSideValidations.validators.local.inclusion(element, options), undefined);
 });
 
+test('when value is in the range', function() {
+  var element = $('<input type="text" />');
+  var options = { message: "failed validation", range: [1, 3] };
+  element.val('1');
+  equal(clientSideValidations.validators.local.inclusion(element, options), undefined);
+});
+
 test('when value is not in the list', function() {
   var element = $('<input type="text" />');
   var options = { message: "failed validation", in: [1, 2, 3] };
+  element.val('4');
+  equal(clientSideValidations.validators.local.inclusion(element, options), "failed validation");
+});
+
+test('when value is not in the range', function() {
+  var element = $('<input type="text" />');
+  var options = { message: "failed validation", range: [1, 3] };
   element.val('4');
   equal(clientSideValidations.validators.local.inclusion(element, options), "failed validation");
 });
@@ -25,3 +39,4 @@ test('when not allowing blank', function() {
   var options = { message: "failed validation", in: [1, 2, 3] };
   equal(clientSideValidations.validators.local.inclusion(element, options), "failed validation");
 });
+
